<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:background="@android:color/darker_gray"
    android:orientation="horizontal"

    tools:showIn="@layout/activity_main">

    <ImageButton
        android:id="@+id/cover_image_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_green_light"
        android:contentDescription="@string/image_description_guitar_icon"
        app:srcCompat="@drawable/ic_action_guitar" />

    <ImageButton
        android:id="@+id/backward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/image_description_turn_left_icon"
        app:srcCompat="@drawable/ic_action_turn_left" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/image_description_playback_icon"
        app:srcCompat="@drawable/ic_action_playback_play" />

    <ImageButton
        android:id="@+id/forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/image_description_turn_right_icon"
        app:srcCompat="@drawable/ic_action_turn_right" />

    <ImageButton
        android:id="@+id/play_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/image_description_menu_icon"
        app:srcCompat="@drawable/ic_menu" />
</LinearLayout>