<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greiner_co.musicalstructureapp.MainActivity">

    <LinearLayout
        android:id="@+id/top_button_bar"
        android:layout_width="@dimen/top_button_bar_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/top_button_bar_margin_right"
        android:layout_marginLeft="@dimen/top_button_bar_margin_left"
        android:layout_marginRight="@dimen/top_button_bar_margin_right"
        android:layout_marginStart="@dimen/top_button_bar_margin_left"
        android:layout_marginTop="@dimen/top_button_bar_margin_top"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_description_settings"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_action_settings"
            tools:layout_editor_absoluteY="557dp" />

        <ImageButton
            android:id="@+id/downloads_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_description_downloads"
            app:srcCompat="@drawable/ic_action_download" />

        <ImageButton
            android:id="@+id/add_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_description_add_playlist"
            app:srcCompat="@drawable/ic_action_list_2" />

        <ImageButton
            android:id="@+id/add_podcast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_description_add_podcast"
            app:srcCompat="@drawable/ic_action_add" />
    </LinearLayout>

    <Button
        android:id="@+id/playlists_button"
        android:layout_width="@dimen/playlists_button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/playlists_button_margin_right"
        android:layout_marginLeft="@dimen/playlists_button_margin_left"
        android:layout_marginRight="@dimen/playlists_button_margin_right"
        android:layout_marginStart="@dimen/playlists_button_margin_left"
        android:layout_marginTop="@dimen/playlists_button_margin_top"
        android:text="@string/button_title_playlists"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_button_bar" />

    <Button
        android:id="@+id/podcasts_button"
        android:layout_width="@dimen/podcasts_button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/podcasts_button_margin_right"
        android:layout_marginLeft="@dimen/podcasts_button_margin_left"
        android:layout_marginRight="@dimen/podcasts_button_margin_right"
        android:layout_marginStart="@dimen/podcasts_button_margin_left"
        android:layout_marginTop="@dimen/podcasts_button_margin_top"
        android:text="@string/button_title_podcast_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlists_button" />

    <include
        android:id="@+id/main_description"
        layout="@layout/description_text_view"
        android:layout_width="@dimen/description_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/description_margin_bottom"
        android:layout_marginEnd="@dimen/description_margin_right"
        android:layout_marginLeft="@dimen/description_margin_left"
        android:layout_marginRight="@dimen/description_margin_right"
        android:layout_marginStart="@dimen/description_margin_left"
        android:layout_marginTop="@dimen/description_margin_top"
        android:text="@string/main_description"
        app:layout_constraintBottom_toTopOf="@+id/main_play_progress_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podcasts_button" />

    <include
        android:id="@+id/main_play_progress_bar"
        layout="@layout/play_progress_bar"
        android:layout_width="@dimen/main_play_progress_bar_width"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/main_play_button_bar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include
        android:id="@+id/main_play_button_bar"
        layout="@layout/play_button_bar"
        android:layout_width="@dimen/main_play_button_bar_width"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
